# ProjectionMapping

./: LICENSE  README.md  package-lock.json
backend/: .gitignore  Cargo.toml  main.py  requirements.txt
backend/src/: main.rs
frontend/: out.json
frontend/projectionmapping/: package-lock.json  package.json  tsconfig.json
frontend/projectionmapping/public/: avatar-240420-18-10-07.glb
frontend/projectionmapping/public/models/: harriet.glb
frontend/projectionmapping/src/app/: App.jsx  index.html  layout.js  layout.tsx  page.js  style.css
frontend/projectionmapping/src/app/about/: page.js
frontend/projectionmapping/src/app/components/: AudioDisplay.js  AvatarDisplay.js  ImageDisplay.js  TextDisplay.js  ThumbnailDisplay.js
frontend/projectionmapping/src/app/create-avatar/: AvatarCreatorComponent.jsx  page.js
frontend/projectionmapping/src/app/download/avatar/: page.js
frontend/projectionmapping/src/app/theatre/: AvatarRenderer.jsx  AvatarRendererAudio.jsx  AvatarRendererNoAudio.jsx  Avatars.jsx  ImageRenderer.jsx  OrbitControlsWithLogging.jsx  SheetElement.js  loading.js  page.js  temp.jsx  test.jsx
frontend/projectionmapping/src/app/upload/audio/: page.js
frontend/projectionmapping/src/app/upload/create-avatar/: AvatarCreatorComponent.jsx  page.js
frontend/projectionmapping/src/app/upload/image/: page.js
frontend/projectionmapping/src/app/upload/text/: page.js
frontend/projectionmapping/src/components/: Avatar.jsx  Background.jsx  Cube.jsx  Experience.jsx  Gif.jsx  PlaneWithAnimatedTexture.jsx  Sprite2.jsx  sprite.jsx
