[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-multipart = "0.6"
serde = { version = "1.0", features = ["derive"] }
sanitize-filename = "0.5"
serde_json = "1.0"
futures = "0.3.30"
futures-util = "0.3.30"
uuid = { version = "1.8.0", features = ["v4"] }
log = "0.4.21"
env_logger = "0.11.3"